# nar-tool

./: CHANGELOG.md  Cargo.toml  README.md  cli_tool_ideas.txt
.github/workflows/: deployment.yml  release-please.yml
src/: cli_commands.rs  lib.rs  main.rs
src/cli_commands/: create_api.rs  create_web_app.rs
