[package]
name = "mutt"
version = "0.1.4"
edition = "2021"
authors = ["Miguel Ferreira"]
description = "Simple cli to scaffold programming projects"
repository = "https://github.com/MiguelFerreira18/nar-tool"
keywords = ["cli"]
categories = ["command-line-interface"]
license-file = "LICENSE.txt"


[dependencies]


